tests/machine/x/c/update_stmt.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘test_update_adult_status’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:35:9: error: ‘people’ undeclared (first use in this function)
   35 |   if (!(people == tmp1)) {
      |         ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:35:9: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:54:11: error: redefinition of ‘name’
   54 |     char *name = tmp4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:51:11: note: previous definition of ‘name’ with type ‘char *’
   51 |     char *name = tmp4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:55:9: error: redefinition of ‘age’
   55 |     int age = tmp4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:52:9: note: previous definition of ‘age’ with type ‘int’
   52 |     int age = tmp4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:56:11: error: redefinition of ‘status’
   56 |     char *status = tmp4.status;
      |           ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:53:11: note: previous definition of ‘status’ with type ‘char *’
   53 |     char *status = tmp4.status;
      |           ^~~~~~

   1: // Generated by Mochi compiler v0.10.24 on 2025-07-13T03:59:23Z
